many minor changes

--- a/about.html
+++ b/about.html
@@ -91,7 +91,7 @@
               <ul>
                 <li><a href="index.html" class="">Главная</a></li>
                 <li>
-                  <a href="shop.html" class="link-active">Магазин</a>
+                  <a href="shop.html">Магазин</a>
                   <ul>
                     <li><a href="electric.html">Электрогитары</a></li>
                     <li><a href="acoustic.html">Акустические гитары</a></li>
