--- a/electric.html
+++ b/electric.html
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="css/base.min.css" />
     <link rel="stylesheet" href="css/category.min.css" />
     <link rel="stylesheet" href="css/items.min.css" />
+    <link rel="stylesheet" href="css/item-page.min.css" />
     <!-- link style css -->
     <link rel="stylesheet" href="fonts/logo/style.css" />
   </head>
