--- a/cart.html
+++ b/cart.html
@@ -77,7 +77,25 @@
 				<section class="items">
 					<div class="container">
 						<div class="wrap"></div>
-						<div class="order-info"></div>
+						<div class="order-info">
+							<h4>Условия заказа</h4>
+							<div class="sep"></div>
+							<div class="small-text">Итого:</div>
+							<div class="c-row">
+								<div class="c-row-item">Количество: 3</div>
+								<div class="c-row-item price">60943 ₽</div>
+							</div>
+							<button class="buy">Перейти к оформлению</button>
+
+							<div class="delivery-info del">
+								<i class="fa-sharp fa-solid fa-truck"></i>
+								Доставка: <span>завтра</span>
+							</div>
+							<div class="delivery-info del">
+								<i class="fa-sharp fa-solid fa-shop"></i>
+								Самовывоз: <span>завтра</span>
+							</div>
+						</div>
 					</div>
 				</section>
 			</main>
