about page completed

--- a/about.html
+++ b/about.html
@@ -1,140 +1,208 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Barett | О нас</title>
-    <link href="https://fonts.cdnfonts.com/css/gogh" rel="stylesheet" />
-    <!-- link gogh font -->
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-    />
-    <!-- link google material icons -->
-    <script
-      src="https://kit.fontawesome.com/b0de6a042c.js"
-      crossorigin="anonymous"
-    ></script>
-    <link rel="stylesheet" href="fontawesome/css/all.min.css" />
-    <!-- link fontawesome -->
-    <link rel="stylesheet" href="css/materialize.min.css" />
-    <!-- link materialize -->
-    <link rel="stylesheet" href="css/base.min.css" />
-    <link rel="stylesheet" href="css/about.min.css" />
-    <!-- link style css -->
-    <link rel="stylesheet" href="fonts/logo/style.css" />
-  </head>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Barett | О нас</title>
+		<link href="https://fonts.cdnfonts.com/css/gogh" rel="stylesheet" />
+		<!-- link gogh font -->
+		<link
+			rel="stylesheet"
+			href="https://fonts.googleapis.com/icon?family=Material+Icons"
+		/>
+		<!-- link google material icons -->
+		<script
+			src="https://kit.fontawesome.com/b0de6a042c.js"
+			crossorigin="anonymous"
+		></script>
+		<link rel="stylesheet" href="fontawesome/css/all.min.css" />
+		<!-- link fontawesome -->
+		<link rel="stylesheet" href="css/materialize.min.css" />
+		<!-- link materialize -->
+		<link rel="stylesheet" href="css/base.min.css" />
+		<link rel="stylesheet" href="css/about.min.css" />
+		<!-- link style css -->
+		<link rel="stylesheet" href="fonts/logo/style.css" />
+	</head>
 
-  <body>
-    <div class="menu-wrap full-hid">
-      <div class="menu">
-        <i class="fa-solid fa-xmark"></i>
-        <h2 class="sec-name">Меню</h2>
-        <div class="sep"></div>
-        <div class="navigation column">
-          <span>Навигация</span>
-          <ul>
-            <li><a href="index.html" class="">Главная</a></li>
-            <li>
-              <a href="shop.html">Магазин</a>
-              <ul>
-                <li><a href="electric.html">Электрогитары</a></li>
-                <li><a href="acoustic.html">Акустические гитары</a></li>
-                <li><a href="classical.html">Классические гитары</a></li>
-                <li><a href="acessories.html">Аксессуары</a></li>
-              </ul>
-            </li>
-            <li><a href="cart.html">Корзина</a></li>
-          </ul>
-        </div>
-        <div class="contacts column">
-          <span>Связаться с нами</span>
-          <ul>
-            <li><a href="">+7 370 730-93-40</a></li>
-            <li><a href="barett@gmail.com">barett@gmail.com</a></li>
-            <li>
-              <a href="adress.html">Адреса магазинов</a>
-            </li>
-            <li><a href="about.html" class="link-active">О нас</a></li>
-            <li><a href="news.html">Новости</a></li>
-          </ul>
-        </div>
-      </div>
-    </div>
-    <header>
-      <div class="container">
-        <span class="cur-page">О нас</span>
-        <div class="mini-menu">
-          <span class="icon-Logo logo"></span>
-          <i class="fa-solid fa-bars bars"></i>
-        </div>
-      </div>
-    </header>
-    <div class="wrapper">
-      <main></main>
-      <footer>
-        <div class="container">
-          <div class="wrap">
-            <div class="column desc">
-              <span class="icon-Logo"></span>
-              <p>
-                Магазин гитар Barett - это крупный музыкальный магазин,
-                специализирующийся на продаже гитар, гитарного оборудования и
-                аксессуаров. В магазине представлены все виды гитар: от
-                начинающих и любителей до профессиональных музыкантов.
-              </p>
-            </div>
-            <div class="sep"></div>
-            <div class="column navigation">
-              <span>Навигация</span>
-              <ul>
-                <li><a href="index.html" class="">Главная</a></li>
-                <li>
-                  <a href="shop.html">Магазин</a>
-                  <ul>
-                    <li><a href="electric.html">Электрогитары</a></li>
-                    <li><a href="acoustic.html">Акустические гитары</a></li>
-                    <li><a href="classical.html">Классические гитары</a></li>
-                    <li><a href="acessories.html">Аксессуары</a></li>
-                  </ul>
-                </li>
-                <li><a href="cart.html">Корзина</a></li>
-              </ul>
-            </div>
-            <div class="sep"></div>
-            <div class="column contacts">
-              <span>Связаться с нами</span>
-              <ul>
-                <li><a href="">+7 370 730-93-40</a></li>
-                <li><a href="barett@gmail.com">barett@gmail.com</a></li>
-                <li>
-                  <a href="adress.html">Адреса магазинов</a>
-                </li>
-                <li><a href="about.html" class="link-active">О нас</a></li>
-                <li><a href="news.html">Новости</a></li>
-              </ul>
-            </div>
-          </div>
-          <div class="social">
-            <i class="fa-brands fa-facebook"></i>
-            <i class="fa-brands fa-instagram"></i>
-            <i class="fa-brands fa-twitter"></i>
-            <i class="fa-brands fa-youtube"></i>
-          </div>
-          <div class="legal">
-            <span>Политика конфиденциальности</span>
-            <div class="sep"></div>
-            <span>Пользовательское соглашение</span>
-            <div class="sep"></div>
-            <span>Отказ от ответственности</span>
-            <div class="sep"></div>
-            <span>Политика использования файлов cookie</span>
-          </div>
-        </div>
-      </footer>
-    </div>
-    <script src="js/shop.js"></script>
-    <script src="js/base.js"></script>
-  </body>
+	<body>
+		<div class="menu-wrap full-hid">
+			<div class="menu">
+				<i class="fa-solid fa-xmark"></i>
+				<h2 class="sec-name">Меню</h2>
+				<div class="sep"></div>
+				<div class="navigation column">
+					<span>Навигация</span>
+					<ul>
+						<li><a href="index.html" class="">Главная</a></li>
+						<li>
+							<a href="shop.html">Магазин</a>
+							<ul>
+								<li><a href="electric.html">Электрогитары</a></li>
+								<li><a href="acoustic.html">Акустические гитары</a></li>
+								<li><a href="classical.html">Классические гитары</a></li>
+								<li><a href="acessories.html">Аксессуары</a></li>
+							</ul>
+						</li>
+						<li><a href="cart.html">Корзина</a></li>
+					</ul>
+				</div>
+				<div class="contacts column">
+					<span>Связаться с нами</span>
+					<ul>
+						<li><a href="">+7 370 730-93-40</a></li>
+						<li><a href="barett@gmail.com">barett@gmail.com</a></li>
+						<li>
+							<a href="adress.html">Адреса магазинов</a>
+						</li>
+						<li><a href="about.html" class="link-active">О нас</a></li>
+						<li><a href="news.html">Новости</a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
+		<header>
+			<div class="container">
+				<span class="cur-page">О нас</span>
+				<div class="mini-menu">
+					<span class="icon-Logo logo"></span>
+					<i class="fa-solid fa-bars bars"></i>
+				</div>
+			</div>
+		</header>
+		<div class="wrapper">
+			<main>
+				<div class="container">
+					<p>Добро пожаловать в интернет-магазин гитар Barett!</p>
+
+					<p>
+						Мы - команда энтузиастов, музыкантов и профессионалов, которые
+						разделяют одну и ту же страсть - любовь к гитаре. В Barett мы
+						предлагаем широкий ассортимент гитар и связанных аксессуаров для
+						всех уровней игры и стилей музыки.
+					</p>
+
+					<p>
+						Наша миссия - сделать процесс выбора и приобретения гитары
+						максимально приятным и легким для каждого нашего клиента. Мы
+						стремимся предоставить высокое качество товаров и превосходное
+						обслуживание, чтобы ваше виртуальное путешествие в мир музыки стало
+						вдохновляющим и удовлетворяющим.
+					</p>
+
+					<div>
+						<h5>Почему выбирают Barett:</h5>
+						<ul>
+							<li>
+								Широкий выбор гитар: У нас вы найдете гитары различных брендов,
+								моделей, типов и ценовых категорий. Независимо от того,
+								являетесь ли вы начинающим музыкантом или опытным
+								профессионалом, у нас есть инструмент, который подойдет именно
+								вам.
+							</li>
+							<li>
+								Качество и надежность: Мы тщательно отбираем все гитары, чтобы
+								убедиться в их качестве и соответствии высоким стандартам.
+								Работаем только с проверенными поставщиками и брендами, чтобы вы
+								получили надежный инструмент, который будет радовать вас долгие
+								годы.
+							</li>
+							<li>
+								Профессиональные консультации: Наша команда экспертов всегда
+								готова помочь вам с выбором гитары, отвечая на ваши вопросы и
+								предоставляя профессиональные рекомендации. Мы понимаем, что
+								выбор гитары может быть сложным, поэтому мы всегда здесь, чтобы
+								помочь вам принять осознанное решение.
+							</li>
+							<li>
+								Удобный онлайн-опыт: Мы уделяем особое внимание
+								пользовательскому опыту и стараемся сделать ваше путешествие по
+								нашему сайту максимально удобным и интуитивно понятным. Легкая
+								навигация, подробные описания товаров и удобная система оплаты -
+								все это для вашего комфорта.
+							</li>
+							<li>
+								Быстрая и надежная доставка: Мы понимаем, что вы желаете
+								получить свою гитару как можно быстрее. Поэтому мы работаем с
+								надежными партнерами по доставке, чтобы гарантировать быструю и
+								безопасную доставку до вашего порога.
+							</li>
+						</ul>
+					</div>
+
+					<p>
+						Надеемся, что в Barett вы найдете идеальную гитару, которая станет
+						вашим надежным партнером в музыкальном творчестве. Если у вас
+						возникнут вопросы или пожелания, не стесняйтесь обращаться к нам. Мы
+						всегда готовы помочь!
+					</p>
+
+					<p>С уважением,Команда Barett</p>
+				</div>
+			</main>
+			<footer>
+				<div class="container">
+					<div class="wrap">
+						<div class="column desc">
+							<span class="icon-Logo"></span>
+							<p>
+								Магазин гитар Barett - это крупный музыкальный магазин,
+								специализирующийся на продаже гитар, гитарного оборудования и
+								аксессуаров. В магазине представлены все виды гитар: от
+								начинающих и любителей до профессиональных музыкантов.
+							</p>
+						</div>
+						<div class="sep"></div>
+						<div class="column navigation">
+							<span>Навигация</span>
+							<ul>
+								<li><a href="index.html" class="">Главная</a></li>
+								<li>
+									<a href="shop.html">Магазин</a>
+									<ul>
+										<li><a href="electric.html">Электрогитары</a></li>
+										<li><a href="acoustic.html">Акустические гитары</a></li>
+										<li><a href="classical.html">Классические гитары</a></li>
+										<li><a href="acessories.html">Аксессуары</a></li>
+									</ul>
+								</li>
+								<li><a href="cart.html">Корзина</a></li>
+							</ul>
+						</div>
+						<div class="sep"></div>
+						<div class="column contacts">
+							<span>Связаться с нами</span>
+							<ul>
+								<li><a href="">+7 370 730-93-40</a></li>
+								<li><a href="barett@gmail.com">barett@gmail.com</a></li>
+								<li>
+									<a href="adress.html">Адреса магазинов</a>
+								</li>
+								<li><a href="about.html" class="link-active">О нас</a></li>
+								<li><a href="news.html">Новости</a></li>
+							</ul>
+						</div>
+					</div>
+					<div class="social">
+						<i class="fa-brands fa-facebook"></i>
+						<i class="fa-brands fa-instagram"></i>
+						<i class="fa-brands fa-twitter"></i>
+						<i class="fa-brands fa-youtube"></i>
+					</div>
+					<div class="legal">
+						<span>Политика конфиденциальности</span>
+						<div class="sep"></div>
+						<span>Пользовательское соглашение</span>
+						<div class="sep"></div>
+						<span>Отказ от ответственности</span>
+						<div class="sep"></div>
+						<span>Политика использования файлов cookie</span>
+					</div>
+				</div>
+			</footer>
+		</div>
+		<script src="js/shop.js"></script>
+		<script src="js/base.js"></script>
+	</body>
 </html>
