news and 404 completed

--- a/404.html
+++ b/404.html
@@ -1,12 +1,38 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  Hello World
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Barett | Not found</title>
+    <link href="https://fonts.cdnfonts.com/css/gogh" rel="stylesheet" />
+    <!-- link gogh font -->
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
+    <!-- link google material icons -->
+    <script
+      src="https://kit.fontawesome.com/b0de6a042c.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="fontawesome/css/all.min.css" />
+    <!-- link fontawesome -->
+    <link rel="stylesheet" href="css/materialize.min.css" />
+    <!-- link materialize -->
+    <link rel="stylesheet" href="css/base.min.css" />
+    <link rel="stylesheet" href="css/404.min.css" />
+    <!-- link style css -->
+    <link rel="stylesheet" href="fonts/logo/style.css" />
+  </head>
+  <body>
+    <span class="icon-Logo logo"></span>
+    <main>
+      <h1 class="error">404</h1>
+      <div class="desc">Страницы с таким именем не существует</div>
+      <a href="index.html"
+        >Вернуться на главную <i class="fa-solid fa-arrow-left"></i
+      ></a>
+    </main>
+  </body>
 </html>
